app2/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
  namespace: demo
spec:
  replicas: 5
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app2
          image: app-2:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  namespace: demo
spec:
  selector:
    app: app2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
